// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FeatureCard > matches the snapshot with an action 1`] = `
<div
  class="bg-card text-card-foreground flex flex-col gap-2 rounded-xl border py-4 shadow-md"
  data-slot="card"
>
  <div
    class="px-4"
    data-slot="card-content"
  >
    <div
      class="flex items-start gap-4"
    >
      <div
        class="p-3 bg-primary/10 rounded-lg"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-shield h-6 w-6 text-primary"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
          />
        </svg>
      </div>
      <div
        class="flex-1 space-y-0"
      >
        <h3
          class="font-semibold text-lg"
        >
          Fraud detection
        </h3>
        <p
          class="text-muted-foreground"
        >
          Only real people can enter.
        </p>
        <div
          class="mt-4"
        >
          <span>
            Included in every plan
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FeatureCard > matches the snapshot without an action 1`] = `
<div
  class="bg-card text-card-foreground flex flex-col gap-2 rounded-xl border py-4 shadow-md"
  data-slot="card"
>
  <div
    class="px-4"
    data-slot="card-content"
  >
    <div
      class="flex items-start gap-4"
    >
      <div
        class="p-3 bg-primary/10 rounded-lg"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-shield h-6 w-6 text-primary"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
          />
        </svg>
      </div>
      <div
        class="flex-1 space-y-0"
      >
        <h3
          class="font-semibold text-lg"
        >
          Fraud detection
        </h3>
        <p
          class="text-muted-foreground"
        >
          Only real people can enter.
        </p>
      </div>
    </div>
  </div>
</div>
`;
